--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <div class="card" data-state="#about">
   <div class="card-header">
     <div class="card-cover" style="background-image: url('https://images.unsplash.com/photo-1549068106-b024baf5062d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80')"></div>
-    <img class="card-avatar" src="https://images.unsplash.com/photo-1549068106-b024baf5062d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80" alt="avatar" />
-    <h1 class="card-fullname">William Rocheald</h1>
-    <h2 class="card-jobtitle">UI Developer</h2>
+    <img class="card-avatar" src="https://i.ibb.co/hgMF1Fx/deabfbd50860f6a49140baa3e7ca742b-2d252a8c89bfd27821ffccb152326ef2.jpg" alt="avatar" />
+    <h1 class="card-fullname">King re bhai</h1>
+    <h2 class="card-jobtitle">IN Developer</h2>
   </div>
   <div class="card-main">
     <div class="card-section is-active" id="about">
@@ -45,7 +45,7 @@
             <div class="card-item-desc">Disrupt stumptown retro everyday carry unicorn.</div>
           </div>
           <div class="card-item" data-year="2016">
-            <div class="card-item-title">UI Developer at <span>GitHub</span></div>
+            <div class="card-item-title">IN Developer at <span>GitHub</span></div>
             <div class="card-item-desc">Developed new conversion funnels and disrupt.</div>
           </div>
           <div class="card-item" data-year="2018">
